# 2022-Team-Visual-Algorithm

./: 2022-readme.md  CMakeLists.txt  main.cpp  main2.cpp  main22.cpp  main4.cpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  run
build3/: CMakeCache.txt  Makefile  cmake_install.cmake  run
build3/Camera/Data/: 041081820595.mvdat  041081820603.mvdat
build3/Camera/log/: warning_20220601-011408.1922
include/: ArmorDetector.hpp  KAl.h  Thread.hpp  energy_predict.h  energy_state.h  kal_filter.hpp  robot_state.h  serialport.h
include/camera/: camera.h
other/: calib_no_4_12801(1).yml
src/: ArmorDetector.cpp  KAL.cpp  Thread.cpp  camera.cpp  energy_get.cpp  energy_predict.cpp  energy_state.cpp  serialport.cpp
tools/: create-startup.sh  monitor.sh
tools/Camera/Data/: 041070120324.mvdat
